Mon Mar  5 10:03:57 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - configure.in: change the default group to "nobody" (more in line with
   previous behaviour)

Mon Mar 5 08:15:00 UTC 2007 / Jon Gough <jon.gough@eclipsesystems.com.au>

 - man/megatec_usb.8: Updated man page to show which commands have been implemented.
 - drivers/megatec_usb.c: Added shutdown.stop command.

Sun Mar  4 21:45:57 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - man/megatec_usb.8: language and style.
 - drivers/apc-hid.c: added comment about model names.

Sun Mar 4 20:30:00 UTC 2007 / Jon Gough <jon.gough@eclipsesystems.com.au>

 - man/megatec_usb.8: Added the first pass at a man page.

Sun Mar  4 19:44:39 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - INSTALL: add --with-group option for configure and advise people to set
   owner:group on statepath and serial devices to root:<group>

Sun Mar  4 19:27:39 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - configure.in: add --with-group option (defaults to "nogroup"), adds
   RUN_AS_GROUP variable
 - scripts/hotplug/libhidups.in: use RUN_AS_GROUP instead of RUN_AS_USER
 - scripts/udev/nut-usbups.rules.in: use RUN_AS_GROUP instead of RUN_AS_USER

Tue Feb 27 22:09:39 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: switched to usb_get_descriptor in
   get/set_data_krauler and removed no more needed "endpoint"
   usb_ups_t struct member.

Tue Feb 27 14:12:02 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: adjusted Unit ID message (not all units support
   this command)
Sun Feb 25 02:51:21 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - data/driver.list: added Dynex DX-800U.
 - usbhid-ups: added new variables ups.vendorid and ups.productid

Sat Feb 24 17:53:31 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - autoconf: try to install hotplug and/or udev files by default. New