@@ -25,9 +25,9 @@
  * 'random' data (see the comments).
  */
 #define	COM_INITIALIZE	"ZCADLIOPERJD\r"
-#define	COM_BATT_TEST	"ZFSDERBTRFGY\r"
-#define	COM_MAINS_TEST	"ZAVLEJFICOPR\r"
-#define	COM_ABORT_TEST	"ZGWLEJFICOPR\r"
+#define	COM_MAINS_TEST	"ZFSDERBTRFGY\r"
+#define	COM_BATT_TEST	"ZAVLEJFICOPR\r"
+#define	COM_STOP_TEST	"ZGWLEJFICOPR\r"
 #define	COM_TOGGLE_BEEP	"ZELWSABPMBEQ\r"
 #define	COM_POLL_STAT	"ZHDGFGDJELBC\r"
 
